# autotest-ui-inspector-platform

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  projects.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: connection.py  transaction.py
backend/app/repositories/: projects.py  users.py
backend/app/schemas/: auth.py  common.py  projects.py
backend/app/services/: auth.py  projects.py
backend/app/tests/: conftest.py  test_auth.py  test_projects.py
backend/sql/: indexes.sql  schema.sql  seed.sql
docs/: api-plan.md  architecture.md  database-design.md  frontend-pages.md  sql-notes.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/analytics/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/logs/: page.tsx
frontend/app/(dashboard)/projects/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/components/auth/: auth-panel.tsx
frontend/components/dashboard/: page-header.tsx
frontend/components/layout/: auth-gate.tsx  dashboard-shell.tsx  sidebar.tsx  top-nav.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  data-table.tsx  input.tsx  metric-card.tsx  state.tsx  textarea.tsx
frontend/lib/: api.ts  auth.ts  demo-data.ts  utils.ts
frontend/types/: api.ts
(+4 files in other folders)
